# mage

./: .gitignore  Cargo.toml  DESIGN-DISTRIBUTION.md  DESIGN-EXTENSIONS.md  DESIGN-REPRODUCIBLE-BUILDS.md  DESIGN-SDK.md  DESIGN-TOOL-RENDERING.md  DESIGN-TUI.md  DESIGN.md  README.md  STATUS.md  UNRESOLVED.md  package-lock.json
docs/: recompilation.md
docs/archive/: DESIGN-DISTRIBUTION.md  DESIGN-EXTENSIONS.md  DESIGN-MONITOR.md  DESIGN-TUI.md
docs/archive/upstream/agentcore/: DESIGN.md  architecture.md  session-format.md
docs/archive/upstream/metarust/: README.md
docs/archive/upstream/tau-tui-next/: design-style-stack.md
docs/upstream/metarust/: reproducible-builds.md
docs/upstream/tau-tui-next/: design-future.md
extensions/tools-coding/: bash.rs
pkg/app/: Cargo.toml
pkg/app/src/: app.rs  command.rs  credentials.rs  lib.rs  monitor.rs  rebuild.rs  run.rs  snapshot_cmd.rs  tui.rs
pkg/core/: Cargo.toml
pkg/core/src/: agent.rs  agent_loop.rs  event_stream.rs  extension.rs  handle.rs  lib.rs  module.rs  session.rs  tool.rs  types.rs  upgrade.rs
pkg/core/tests/: agent_tests.rs  loop_tests.rs  smoke.rs  test_helpers.rs
pkg/llm/: Cargo.toml
pkg/llm/src/: cancel.rs  channel.rs  event.rs  event_stream.rs  json_accum.rs  lib.rs  provider.rs  types.rs
pkg/llm/tests/: json_accum_tests.rs  types_tests.rs
pkg/refstr/: Cargo.toml
pkg/refstr/src/: lib.rs
pkg/refstr/tests/: str_tests.rs
pkg/sdk/: Cargo.toml
pkg/sdk/src/: lib.rs
pkg/tools/: Cargo.toml
pkg/tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  recompile.rs  write.rs
pkg/tui/: Cargo.toml
pkg/tui/examples/: colors.rs  counter.rs  editor.rs  layout.rs  markdown.rs  mdstream.rs  overlay_stress.rs  padding.rs  spinners.rs  stream.rs  styled.rs  styled_tables.rs  tables.rs  wrap_stress.rs
pkg/tui/src/: animated.rs  ansi.rs  app.rs  editor.rs  keymap.rs  layout.rs  lib.rs  markdown.rs  overlay.rs  renderer.rs  style.rs  testutil.rs  text.rs  wrap.rs
pkg/tui/tests/: editor.rs  keymap.rs  layout.rs  layout_panes.rs  markdown.rs  overlay.rs  renderer.rs  style.rs  wrap.rs
providers/anthropic/: Cargo.toml
providers/anthropic/src/: api_types.rs  convert.rs  events.rs  lib.rs  login.rs  models.rs  oauth.rs  provider.rs  sse.rs
providers/anthropic/tests/: convert_tests.rs  events_tests.rs  oauth_tests.rs  sse_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
