[workspace]
resolver = "2"
members = [
    "pkg/refstr",
    "pkg/llm",
    "pkg/core",
    "pkg/app",
    "pkg/tui",
    "pkg/build",
    "providers/anthropic",
    "pkg/tools",
    "pkg/sdk",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-util = "0.7"
async-trait = "0.1"
