[package]
name = "mage-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_app"

[dependencies]
mage-core = { path = "../core" }
mage-tui = { path = "../tui" }
llm = { package = "mage-llm", path = "../llm" }
refstr = { path = "../refstr" }
serde_json.workspace = true
tokio.workspace = true
crossterm = { version = "0.28" }
dirs = "6"
serde.workspace = true
