[package]
name = "mage-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_app"

[dependencies]
mage-core = { path = "../core" }
mage-tools = { path = "../tools" }
mage-tui = { path = "../tui" }
mage-build = { path = "../build" }
llm = { package = "mage-llm", path = "../llm" }
anthropic = { package = "mage-anthropic", path = "../../providers/anthropic" }
refstr = { path = "../refstr" }
serde_json.workspace = true
tokio.workspace = true
crossterm = { version = "0.28" }
dirs = "6"
serde.workspace = true
