[package]
name = "mage-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_app"

[dependencies]
mage-core.workspace = true
mage-tools.workspace = true
mage-tui.workspace = true
mage-build.workspace = true
llm.workspace = true
anthropic.workspace = true
refstr.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossterm = { version = "0.28" }
dirs = "6"
serde.workspace = true
