[package]
name = "mage-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_core"

[dependencies]
llm = { package = "mage-llm", path = "../llm" }
refstr = { path = "../refstr" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }
