[package]
name = "mage-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_core"

[dependencies]
llm.workspace = true
refstr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }
