[package]
name = "mage-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_sdk"

[dependencies]
mage-core.workspace = true
mage-tools.workspace = true
mage-app.workspace = true
llm.workspace = true
mage-tui.workspace = true
mage-build.workspace = true
refstr.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
