[package]
name = "mage-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mage_tools"

[dependencies]
mage-core.workspace = true
mage-build.workspace = true
llm.workspace = true
refstr.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
async-trait.workspace = true
globset = "0.4"
walkdir = "2"
regex = "1"
dirs = "6"
