[package]
name = "mage-anthropic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "anthropic"

[dependencies]
llm = { package = "mage-llm", path = "../../pkg/llm" }
refstr = { path = "../../pkg/refstr" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
dirs = "6"
